fixed all of the wrong coloring for exceeding metrics on player analysis and snapshot pages. fixed the space between colored boxes in team overview page per bens request. downloaded all of the vector team logos for all mlb teams.

--- a/public/less/checkboxes.less
+++ b/public/less/checkboxes.less
@@ -67,7 +67,7 @@ input[type=checkbox]{
   height: @checkbox-height;
   width: @checkbox-height;
   margin-bottom:0;
-  border: @checkbox-height * .1 solid @unchecked-color;
+  border: @checkbox-height * 0 solid @unchecked-color;
   border-radius: 5px;
   position: relative;
   display: inline-block;
