--- a/public/less/player.less
+++ b/public/less/player.less
@@ -122,7 +122,8 @@
       font-size: 36px;
       span {
         line-height: 30px;
-        padding-left: 24px;
+        padding-left: .45em;
+        padding-right: 0.45em;
       }
     }
     ul {
